Update Hg19Config and Hg38Config to include new gnomad data sources and remove dbsnp and exac datasources as these are provided as part of gnomad.